# Irotoiro_AI

./: .gitignore  CMakeLists.txt  ENGINE.md  SPEC.md
core/bench/: bench.cpp
core/cli/: cli.cpp
core/include/irotoiro/: bot.hpp  engine.hpp  search.hpp
core/src/: bot.cpp  engine.cpp  search.cpp
core/tests/: test_core.cpp
docs/: PORT_ORACLE.md
web/: ai.js  ai.test.js  engine.js  irotoiro.html  vercel.json
